# ctr-native

./: .clangd  .gitignore  CMakeLists.txt  Makefile.vita  README.md  THIRD_PARTY_NOTICES.md  build.bat  build.sh  ctr_native.c  game_includes.h  main.c  platform.h
docs/: MEMORY_MODEL.md  OVERLAYS.md
game/: 221.c  221_225_EndEvent.c  222.c  223.c  224.c  225.c  BOTS.c  CAM.c  CDSYS.c  COLL.c  DebugFont.c  DecalFont.c  DecalGlobal.c  DecalHUD.c  DecalMP.c  Display.c  DotLights.c  DropRain.c  ElimBG.c  FLARE.c  GAMEPAD.c  GAMEPROG.c  GhostReplay.c  GhostTape.c  INSTANCE.c  JitPool.c  LHMatrix.c  LIST.c  LevInstDef.c  LinkedCollide.c  MEMPACK.c  PROC.c  Particle.c  PushBuffer.c  QueueLoadTrack.c  RECTMENU.c  RaceConfig.c  RaceFlag.c  RefreshCard.c  SelectProfile.c  (+9 more)
game/221/: 221_Full.c
game/222/: 222_Full.c
game/223/: 223_Full.c
game/224/: 224_Full.c
game/225/: 225_Full.c
game/226/: 226_00_DrawLevelOvr1P.c
game/227/: 227_00_DrawLevelOvr2P.c
game/228/: 228_00_DrawLevelOvr3P.c  R228.c
game/229/: 229_00_DrawLevelOvr4P.c  R229.c
game/230/: 230_00_MM_Battle_DrawIcon_Character.c  230_02_MM_Title_MenuUpdate.c  230_04_MM_Title_CameraMove.c  230_05_MM_Title_ThTick.c  230_07_MM_Title_CameraReset.c  230_09_30_MM_CheatCodes.c  230_31_MM_MenuProc_Main.c  230_32_MM_ToggleRows_PlayerCount.c  230_35_MM_ToggleRows_Difficulty.c  230_37_MM_MenuProc_SingleCup.c  230_41_MM_Characters_GetNextDriver.c  230_44_MM_Characters_DrawWindows.c  230_45_MM_Characters_SetMenuLayout.c  230_49_MM_Characters_HideDrivers.c  230_50_MM_Characters_MenuProc.c  230_52_MM_TrackSelect_Video_State.c  230_53_MM_TrackSelect_Video_Draw.c  230_55_MM_TrackSelect_Init.c  230_56_MM_TrackSelect_MenuProc.c  230_59_MM_CupSelect_MenuProc.c  230_61_MM_Battle_DrawIcon_Weapon.c  230_63_MM_Battle_MenuProc.c  230_64_MM_HighScore_Text3D.c  230_65_MM_HighScore_Draw.c  230_67_MM_HighScore_MenuProc.c  230_68_MM_Scrapbook_Init.c  230_69_MM_Scrapbook_PlayMovie.c  230_70_MM_ResetAllMenus.c  230_77_MM_Video_DecDCToutCallbackFunc.c  230_78_MM_Video_KickCD.c  230_80_MM_Video_StartStream.c  230_81_MM_Video_StopStream.c  230_82_MM_Video_AllocMem.c  230_84_MM_Video_DecodeFrame.c  230_Full.c  D230.c  (+9 more)
include/: common.h  ctr_gte.h  ctr_math.h  ctr_scratchpad.h  decomp_functions.h  functions.h  gpu.h  gte.h  macros.h  namespace_Bots.h  namespace_Camera.h  namespace_Cdsys.h  namespace_Coll.h  namespace_Decal.h  namespace_Display.h  namespace_DrawLevel.h  namespace_Gamepad.h  namespace_Ghost.h  namespace_Howl.h  namespace_Instance.h  namespace_JitPool.h  namespace_Level.h  namespace_List.h  namespace_Load.h  namespace_Main.h  namespace_Memcard.h  namespace_Mempack.h  namespace_Particle.h  namespace_Proc.h  namespace_PushBuffer.h  namespace_RectMenu.h  namespace_UI.h  namespace_Vehicle.h  ovr_230.h  ovr_231.h  ovr_232.h  ovr_233.h  regionsEXE.h
platform/: native_assets.c  native_audio.c  native_cd.c  native_checkpoint.c  native_glad.c  native_gpu.c  native_gpu_links.c  native_gte_core.c  native_input.c  native_libapi.c  native_libetc.c  native_libgpu.c  native_libgte.c  native_log.c  native_memcard.c  native_memory.c  native_platform.c  native_renderer.c  native_renderer_backend.c  native_replay_scheduler.c  native_str.c
(+814 files in other folders)
